src-rs/oneil_snapshot_tests/src/snapshots/oneil_snapshot_tests__test__overlay_wrong_target_for_ref.snap
---
source: src-rs/oneil_snapshot_tests/src/test.rs
expression: "run_fixture(\"design_overlay/wrong_target/parent.on\")"
---
error: `apply wrong_target_design.one to planet`: design `wrong_target_design.one` targets `gravity_mars.on`, but `planet` resolves to `gravity_earth.on`. Use a design whose `design <model>` matches `gravity_earth.on`.
  at fixtures/design_overlay/wrong_target/parent.on:7:7
---

Model: fixtures/design_overlay/wrong_target/parent.on
Tests: 0/0
Parameters:
  m = 100 :kg
  w = 981 :N
