src-rs/oneil_snapshot_tests/src/snapshots/oneil_snapshot_tests__test__submodel_neither_on_nor_one_found.snap
---
source: src-rs/oneil_snapshot_tests/src/test.rs
expression: "run_fixture(\"design_overlay/missing_model/parent.on\")"
---
error: no model or design file found (looked for `fixtures/design_overlay/missing_model/nonexistent.on` and `fixtures/design_overlay/missing_model/nonexistent.one`)
  at fixtures/design_overlay/missing_model/parent.on:3:25
---

Model: fixtures/design_overlay/missing_model/parent.on
Tests: 0/0
Parameters:
  m = 5 :kg
