src-rs/oneil_snapshot_tests/src/snapshots/oneil_snapshot_tests__test__submodel_syntax_error.snap
---
source: src-rs/oneil_snapshot_tests/src/test.rs
expression: "run_fixture(\"submodel_syntax_error/parent.on\")"
---
error: expected parameter or test
  at fixtures/submodel_syntax_error/child.on:3:18

error: submodel `c` has errors
  at fixtures/submodel_syntax_error/parent.on:2:10
---

Model: fixtures/submodel_syntax_error/parent.on
Tests: 0/0
Parameters:
  scale = 2
  r = 20 :kg
